--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.14.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "client": "npm start --prefix client",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
