--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "client": "npm start --prefix client",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"nodemon server\" \"npm run client\""
+    "dev": "concurrently \"nodemon server.js\" \"npm run client\""
   },
   "author": "Gustave Nzitunga",
   "license": "ISC",
