--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.14.0"
   },
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "client": "npm start --prefix client",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mailchimp-api-v3": "^1.15.0",
+    "mongodb": "^4.4.1",
     "nodemon": "^2.0.15",
     "path": "^0.12.7"
   }
