--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.3",
     "mailchimp-api-v3": "^1.15.0",
     "mongodb": "^4.4.1",
+    "nginx": "^1.0.3",
     "nodemon": "^2.0.15",
     "path": "^0.12.7"
   }
