--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "mongodb": "^4.4.1",
     "nginx": "^1.0.3",
     "nodemon": "^2.0.15",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "serverless-http": "^2.7.0"
+  },
+  "devDependencies": {
+    "netlify-cli": "^9.13.4"
   }
 }
